# krawczyk-method

./: CMakeLists.txt  README.md  build.sh
include/: ExCoefficients.h  Global.h  IntervalVec.hpp  Node.hpp  Region.h  quadtree.h  vec2d.h
src/: ExCoefficients.cpp  Global.cpp  Region.cpp  main.cpp  quadtree.cpp
